[gd_scene load_steps=6 format=4 uid="uid://ed7dg0nyvb5g"]

[ext_resource type="Script" uid="uid://lau831tkf3y5" path="res://assets/scripts/slide_gate.gd" id="1_4j4nf"]
[ext_resource type="Texture2D" uid="uid://cfn7x2qwkx2nm" path="res://assets/sprites/slide-gate.png" id="1_ipdie"]
[ext_resource type="Script" uid="uid://bqkynots1tlsb" path="res://assets/scripts/portal_phantomed.gd" id="3_nckyn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4j4nf"]
texture = ExtResource("1_ipdie")
texture_region_size = Vector2i(8, 8)
0:0/next_alternative_id = 3
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -4, 2, -4, 2, 4, -2, 4)
0:0/0/terrains_peering_bit/bottom_side = 0
0:0/1 = 1
0:0/1/transpose = true
0:0/1/terrain_set = 0
0:0/1/terrain = 0
0:0/1/terrains_peering_bit/right_side = 0
0:1/next_alternative_id = 2
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -4, 2, -4, 2, 4, -2, 4)
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/1 = 1
0:1/1/transpose = true
0:1/1/terrain_set = 0
0:1/1/terrain = 0
0:1/1/terrains_peering_bit/right_side = 0
0:1/1/terrains_peering_bit/left_side = 0
0:2/next_alternative_id = 2
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -4, 2, -4, 2, 4, -2, 4)
0:2/0/terrains_peering_bit/top_side = 0
0:2/1 = 1
0:2/1/transpose = true
0:2/1/terrain_set = 0
0:2/1/terrain = 0
0:2/1/terrains_peering_bit/left_side = 0
1:2/next_alternative_id = 2
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 1
1:2/0/terrains_peering_bit/top_side = 1
1:2/1 = 1
1:2/1/transpose = true
1:2/1/terrain_set = 0
1:2/1/terrain = 1
1:2/1/terrains_peering_bit/left_side = 1
1:1/next_alternative_id = 2
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 1
1:1/0/terrains_peering_bit/bottom_side = 1
1:1/0/terrains_peering_bit/top_side = 1
1:1/1 = 1
1:1/1/transpose = true
1:1/1/terrain_set = 0
1:1/1/terrain = 1
1:1/1/terrains_peering_bit/right_side = 1
1:1/1/terrains_peering_bit/left_side = 1
1:0/next_alternative_id = 2
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 1
1:0/0/terrains_peering_bit/bottom_side = 1
1:0/1 = 1
1:0/1/transpose = true
1:0/1/terrain_set = 0
1:0/1/terrain = 1
1:0/1/terrains_peering_bit/right_side = 1

[sub_resource type="TileSet" id="TileSet_b5w78"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 3
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "gate"
terrain_set_0/terrain_0/color = Color(0.382032, 0.374393, 0.390818, 1)
terrain_set_0/terrain_1/name = "gate rail"
terrain_set_0/terrain_1/color = Color(0.270588, 0.180392, 0.141176, 1)
sources/0 = SubResource("TileSetAtlasSource_4j4nf")

[node name="SlideGate" type="Node2D"]
script = ExtResource("1_4j4nf")

[node name="RailLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAAAAAEAAAABAAEAAAAAAAIAAAABAAEAAAAAAAMAAAABAAEAAAAAAAQAAAABAAEAAAAAAAUAAAABAAIAAAA=")
tile_set = SubResource("TileSet_b5w78")

[node name="GateLayer" type="TileMapLayer" parent="."]
z_index = 1
position = Vector2(0, 24)
tile_map_data = PackedByteArray("AAAAAAIAAAAAAAIAAAAAAAEAAAAAAAEAAAAAAAAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_b5w78")

[node name="ClosedPos" type="Node2D" parent="."]
position = Vector2(0, 24)

[node name="PortalPhantomed" type="Node" parent="." node_paths=PackedStringArray("phantoms")]
script = ExtResource("3_nckyn")
phantoms = [NodePath("../RailLayer"), NodePath("../GateLayer")]
metadata/_custom_type_script = "uid://bqkynots1tlsb"
